<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PartyApp</string>
    <string name="logout">退出登录</string>
    <string name="login">登陆</string>
    <string name="anonymous">游客</string>
    <string name="quit">退出</string>
    <string name="username">姓名: </string>
    <string name="password">密码: </string>
    <string name="studentid">学号: </string>
    <string name="party">所属党支部: </string>
    <string name="level">阶段: </string>
    <string name="full_date">转正日期: </string>
    <string name="intern_date">成为预备党员日期: </string>
    <string name="interst_date">成为积极分子日期: </string>
    <string name="next_submit_date">下次提交思想汇报时间: </string>
    <string name="user_list">党支部名单</string>
    <string name="add_user">添加新用户</string>
    <string name="add_news">发布新闻</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="news">新闻</string>
    <string name="chat">聊天</string>
    <string name="profile">个人</string>
    <string name="leader">管理</string>
    <string name="submit">确认发送</string>
    <string name="chat_input">输入140字……</string>
    <string name="view_news">查看全文</string>
    <string name="leader_list_title">党支部名单</string>
    <string name="leader_list_hint">查看你刮泥的党支部成员名单</string>
    <string name="leader_news_title">发布新闻</string>
    <string name="leader_news_hint">你所在的党支部的成员将收到你的通知</string>
    <string name="leader_user_title">添加新成员</string>
    <string name="leader_user_hint">添加积极向党组织靠拢的成员</string>
    <string name="add_news_text">您拥有发布新闻的权限，点击发布新闻\n\n注意：编辑发送成功之后我们的服务器会对您发布的内容进行检测，如有违规内容，您所发布的新闻将不会出现在新闻栏目中，敬请配合理解！</string>
	<string name="add_news_button">点击发布新闻内容</string>
    
</resources>
