<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/login_background"
    android:padding="10dip"
    tools:context="com.fdparty.login.MainActivity" >

    <LinearLayout
        android:id="@+id/login_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password_field"
        android:layout_centerVertical="true"
        android:padding="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/studentid"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/password"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:inputType="textPassword" />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/login_button_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_field"
        android:orientation="horizontal" 
        android:padding="15dip" >

        <Button
            android:id="@+id/login"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:background="@drawable/login_bt"
            android:onClick="loginHandler"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_marginRight="12dip"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />


        <Button
            android:id="@+id/anonymous"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:layout_marginLeft="12dip"
            android:background="@drawable/login_bt"
            android:onClick="anonymousLoginHandler"
            android:text="@string/anonymous"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>